[[FIX]] Sticky header jump bug fixed, header slots' content alignment fixed
- Fixed getTopPaddings() function to be able to calculate total sticky header's top padding even if the slots have not been created yet
- Fixed CSS rules that aligns the slot's content; now the aren't position-dependent anymore; they use slot id instead
- Project rebuilt

--- a/src/jquery.sticky-header.css
+++ b/src/jquery.sticky-header.css
@@ -33,10 +33,10 @@
   vertical-align: middle;
 }
 
-[data-sticky-header] [data-sticky-header-container] > div:nth-of-type(2) {
+[data-sticky-header] [data-sticky-header-container] [data-sticky-header-slot-position=C] {
   text-align: center;
 }
 
-[data-sticky-header] [data-sticky-header-container] > div:nth-of-type(3) {
+[data-sticky-header] [data-sticky-header-container] [data-sticky-header-slot-position=R] {
   text-align: right;
 }
